# study-improve-head-edpr

./: .gitpod.yml  1319t012sr_ie2-400_14-1-66.prt.1  1524e012sr_ie2-512_15-8-141.prt.1  1717t012sr_ie2_512_lc.prt.1  20633-x30t-01s_20525-x30e-02c.prt.1  README.md  aea.prt.1  ccam3_connector_board.prt.1  ccam3_imager_board_01.prt.1  ccam3_imager_board_02.prt.1  cusci_dgbb3.prt.1  eds_electronic_board.asm.1  fbs_electronic_board.prt.1  fbs_electronic_board_assembly.asm.1  fbs_electronic_board_pcb.prt.1  hfuc-5-50-2a-r-sp_a.prt.1  hfuc-5-50-2a-r-sp_b.prt.1  hfuc-5-50-2a-r-sp_c.prt.1  icub3_020_g_006.asm.1  icub3_020_g_100.asm.1  icub3_020_g_101.asm.1  icub3_020_g_102.asm.1  icub3_020_g_103.asm.1  icub3_020_g_104.asm.1  icub3_020_g_105.asm.1  icub3_020_g_106.asm.1  icub3_020_g_110.asm.1  icub3_020_g_112.asm.1  icub3_020_g_300.asm.1  icub3_020_g_301.asm.1  icub3_020_g_302.asm.1  icub3_020_p_002.prt.1  icub3_020_p_003.prt.1  icub3_020_p_100.prt.1  icub3_020_p_101.prt.1  icub3_020_p_103.prt.1  icub3_020_p_104.prt.1  icub3_020_p_105.prt.1  icub3_020_p_106.prt.1  icub3_020_p_107.prt.1  (+47 more)
eye_motor_tilt_study_01/: README.md  icub3_020_g_300.asm.1  icub3_020_g_300_skel0001.prt.1  icub3_020_g_301.asm.1
eyes-tilt-motor-sizing/: README.md
eyes-tilt-motor-sizing/models/: ICUB3_020_G_300.slx  ICUB3_020_G_300_no_motor.slx  eyesTilt.slx
fkin/: .gitignore  CMakeLists.txt  README.md  index.html  index.html.urdf  main.cpp  octave-script.m  plot.sh  sample.urdf  serve.sh  view.sh
log-joint/: README.md  main.cpp  plot_results.m
models/: eyesTilt.slx
study_01/: icub3_020_g_302.asm.1
(+238 files in other folders)
